--- a/src/app/board/add-column/add-column.component.html
+++ b/src/app/board/add-column/add-column.component.html
@@ -1,6 +1,7 @@
-<p>add-column works!</p>
-<form [formGroup]="nameForm" (ngSubmit)="onSubmit()">
+
+<form [formGroup]="nameForm">
     <label>name:</label>
     <input type="text" formControlName="name">
     <button type="submit" [disabled]="!nameForm.valid" (click)="onSubmit()">Submit</button>
 </form>
+
