--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,6 +61,7 @@
   }
 
   .content {
+    border: 4px solid black;
     display: flex;
     margin: 82px auto 32px;
     padding: 0 16px;
@@ -297,7 +298,7 @@
     }
   }
 </style>
-  <app-add-column (info)="createColumn($event)" class='.content'></app-add-column>
+  <app-add-column (info)="createColumn($event)"></app-add-column>
   <div class="AddColumnComponent" *ngFor="let name of tabcolumn">{{ name }}
   <app-column [columnName]="name"></app-column>
   </div>
